# utilus-assigment

./: .gitignore  AI_USAGE.md  ASSUMPTIONS.md  DESIGN.md  README.md  main.py  output.json  pyproject.toml  requirement.txt
src/assignment/: __init__.py  cli.py  io.py
src/assignment/saas_metrics/: loader.py  metrics.py  report.py
tests/: test_churn.py  test_io.py  test_loader.py  test_main.py  test_retention.py
